# FSP1

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  linux-compilation.yml  macos-compilation.yml
cmake/: defines.cmake
project/: CMakeLists.txt
project/qml/: Main.qml
project/qml/charmaker/: CMMain.qml  CMView.qml
project/qml/common/: CButton.qml  CCharacterAction.qml  CCheckButton.qml  CModel.qml  CSlider.qml  CStyle.qml  CTab.qml  CTextInput.qml
project/resources/: resources.rc.in
project/src/: Config.hpp.in  Manager.cpp  Manager.hpp  main.cpp
project/src/tools/: About.cpp  About.hpp
